--- a/index.html
+++ b/index.html
@@ -4374,7 +4374,27 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>A Comparison of Thrombosis and Hemorrhage Rates in Patients With Severe Respiratory Failure Due to Coronavirus Disease 2019 and Influenza Requiring Extracorporeal Membrane Oxygenation</h3>
+     <p class="price">Source: Critical Care Medicine, Published on April 5, 2021</p>
+     <a href="http://dx.doi.org/10.1097/CCM.0000000000004971" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
    </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Endothelial dysfunction and immunothrombosis as key pathogenic mechanisms in COVID-19</h3>
+     <p class="price">Source: Nature, Published on April 6, 2021</p>
+     <a href="https://doi.org/10.1038/s41577-021-00536-9" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Post-Discharge Thromboembolic Outcomes and Mortality of Hospitalized COVID-19 Patients: The CORE-19 Registry</h3>
@@ -4617,7 +4637,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>      
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>High-throughput, single-copy sequencing reveals SARS-CoV-2 spike variants coincident with mounting humoral immunity during acute COVID-19</h3>
+     <p class="price">Source: PLOS Pathogen, Published on April 8, 2021</p>
+     <a href="https://doi.org/10.1371/journal.ppat.1009431" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Lilly and Incyte announce results from the Phase 3 COV-BARRIER study of baricitinib in hospitalized COVID-19 patients</h3>
@@ -4729,6 +4759,26 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Thrombotic Thrombocytopenia after ChAdOx1 nCov-19 Vaccination</h3>
+     <p class="price">Source: New England Journal of Medicine (NEJM), Published on April 9, 2021</p>
+     <a href="https://www.nejm.org/doi/full/10.1056/NEJMoa2104840" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Pfizer and BioNTech Request Regulatory Agencies Expand Emergency Use of Their COVID-19 Vaccine to Adolescents</h3>
+     <p class="price">Source: Pfizer and BioNTech, Published on April 9, 2021</p>
+     <a href="https://investors.biontech.de/news-releases/news-release-details/pfizer-and-biontech-request-regulatory-agencies-expand-emergency" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
 <div>
   <a href="javascript:void(0)" class="news-btn covidnews"><i class="fas fa-plus fa-fw" aria-hidden="true"></i>Past Coronavirus News</a>  
 </div>
