--- a/covidnews.html
+++ b/covidnews.html
@@ -1160,6 +1160,26 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>What the data say about asymptomatic COVID infections</h3>
+     <p class="price">Source: Nature, Publish on November 18, 2020</p>
+     <a href="https://www.nature.com/articles/d41586-020-03141-3" class="btn">Link to Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Incidence, clinical features, and outcomes of COVID-19 in Canada: impact of sex and age</h3>
+     <p class="price">Source: Biomedicalcentral, Publish on November 24, 2020</p>
+     <a href="https://doi.org/10.1186/s13048-020-00734-4" class="btn">Link to Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
    <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Serologic testing of U.S. blood donations to identify SARS-CoV-2-reactive antibodies: December 2019-January 2020</h3>
