--- a/index.html
+++ b/index.html
@@ -2121,14 +2121,14 @@
  <section class="boxes">
   <div class="box">
    <i class="fas fa-route fa-4x"></i>
-   <h2 class="distribute-num">Loading</h2>
-   <h3>Distributed: Updated Weekly by CDC</h3>
+   <h2>Distributed: Updated Weekly by CDC</h2>
+   <h3 class="distribute-num">Loading</h3>
    <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations" class="btn">See More about COVID-19 Vaccination</a> 
   </div>
   <div class="box">
    <i class="fas fa-syringe fa-4x"></i>
-   <h2 class="distribute-num">Loading...</h2> 
-   <h3>Administerd: Updated Weekly by CDC</h3>
+   <h2>Administerd Vaccines: Updated Weekly by CDC</h2>
+   <h3 class="administer-num">Loading...</h3> 
    <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations" class="btn">See More about COVID-19 Vaccination</a> 
   </div>
  </section>
