--- a/index.html
+++ b/index.html
@@ -2121,15 +2121,15 @@
  <section class="boxes">
   <div class="box">
    <i class="fas fa-route fa-4x"></i>
-   <h2>Distributed: Updated Weekly by CDC</h2>
+   <h2>Distributed Vaccines: Updated Weekly by CDC</h2>
    <h3 class="distribute-num">Loading</h3>
-   <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations" class="btn">See More about COVID-19 Vaccination</a> 
+   <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations">See More about COVID-19 Vaccination</a> 
   </div>
   <div class="box">
    <i class="fas fa-syringe fa-4x"></i>
    <h2>Administerd Vaccines: Updated Weekly by CDC</h2>
    <h3 class="administer-num">Loading...</h3> 
-   <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations" class="btn">See More about COVID-19 Vaccination</a> 
+   <a href="https://covid.cdc.gov/covid-data-tracker/#vaccinations">See More about COVID-19 Vaccination</a> 
   </div>
  </section>
 
