--- a/index.html
+++ b/index.html
@@ -2122,13 +2122,13 @@
   <div class="box">
    <i class="fas fa-route fa-4x"></i>
    <h2>Distributed Vaccines: Updated Weekly by CDC</h2>
-   <h3 class="distribute-num">Loading</h3>
+   <h3 class="distribute-num"><strong><span style="color:red">Loading...</strong></span></h3>
    <a class="news-btn" href="https://covid.cdc.gov/covid-data-tracker/#vaccinations">See More about COVID-19 Vaccination</a> 
   </div>
   <div class="box">
    <i class="fas fa-syringe fa-4x"></i>
    <h2>Administerd Vaccines: Updated Weekly by CDC</h2>
-   <h3 class="administer-num">Loading...</h3> 
+   <h3 class="administer-num"><strong><span style="color:red">Loading...</strong></span></h3> 
    <a class="news-btn" href="https://covid.cdc.gov/covid-data-tracker/#vaccinations">See More about COVID-19 Vaccination</a> 
   </div>
  </section>
