--- a/covidnews.html
+++ b/covidnews.html
@@ -4740,7 +4740,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>     
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Estimating COVID-19 exposure in a classroom setting: A comparison between mathematical and numerical models</h3>
+     <p class="price">Source: AP Physics of Fluids, Published on February 24, 2021</p>
+     <a href="https://doi.org/10.1063/5.0040755" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Vaccines can get us to herd immunity, despite the variants</h3>
@@ -6164,6 +6174,17 @@
      <h3>Peginterferon lambda for the treatment of outpatients with COVID-19: a phase 2, placebo-controlled randomised trial</h3>
      <p class="price">Source: Lancet, Published on March 4, 2021</p>
      <a href="https://doi.org/10.1016/S2213-2600(20)30566-X" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>The Experience of COVID-19 and Its Impact on Teachers’ Mental Health, Coping, and Teaching</h3>
+     <p class="price">Source: Taylor Francis Online School Psychology Review, Published on March 4, 2021</p>
+     <a href="https://doi.org/10.1080/2372966X.2020.1855473" class="btn">Link to Study Article</a>
+     <a href="img/article3" class="btn">Link to PDF</a>
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
