--- a/index.html
+++ b/index.html
@@ -4995,6 +4995,7 @@
      <h3>Regeneron to seek U.S. OK for COVID-19 cocktail to be used for prevention</h3>
      <p class="price">Source: Reuters, Published on April 11, 2021</p>
      <a href="https://www.reuters.com/article/us-health-coronavirus-roche-regeneron-ph-idUSKBN2BZ0CG" class="btn">Link to Article</a>
+     <a href="https://investor.regeneron.com/news-releases/news-release-details/phase-3-prevention-trial-showed-81-reduced-risk-symptomatic-sars" class="btn">Link to Regeneron Article</a> 
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
