--- a/index.html
+++ b/index.html
@@ -2121,14 +2121,14 @@
  <section class="boxes">
   <div class="box">
    <i class="fas fa-route fa-4x"></i>
-   <h2>Distributed Vaccines: Updated Weekly by CDC</h2>
-   <h3 class="distribute-num"><strong><span style="color:red">Loading...</strong></span></h3>
+   <h2>Distributed Vaccines: Updated by CDC</h2>
+   <h3><strong><span style="color:green" class="distribute-num">Loading...</strong></span></h3>
    <a class="news-btn" href="https://covid.cdc.gov/covid-data-tracker/#vaccinations">See More about COVID-19 Vaccination</a> 
   </div>
   <div class="box">
    <i class="fas fa-syringe fa-4x"></i>
-   <h2>Administerd Vaccines: Updated Weekly by CDC</h2>
-   <h3 class="administer-num"><strong><span style="color:red">Loading...</strong></span></h3> 
+   <h2>Administerd Vaccines: Updated by CDC</h2>
+   <h3><strong><span style="color:green" class="administer-num">Loading...</strong></span></h3> 
    <a class="news-btn" href="https://covid.cdc.gov/covid-data-tracker/#vaccinations">See More about COVID-19 Vaccination</a> 
   </div>
  </section>
@@ -2208,7 +2208,7 @@
  <div class="wrapper">
   <div class="main-nav">
    <ul class="single-block">
-    <li><a href="#">News Media (May Experience Pay Wall) and Research Articles</a></li>
+    <li><a href="#">News Media (May Experience Pay Wall) and Research Articles (May Experience Pay Wall)</a></li>
       <!-- <div class="FilterRow">
         <input id="searchBarNews" placeholder="Search News and Research Article" class="searchBar">
          <select id="dateSourceSel" class="sourceSel">
