--- a/index.html
+++ b/index.html
@@ -2118,6 +2118,11 @@
  </section>
 
 <!-- Vaccine Box Section -->
+<div class="box">
+   <h2>Fully Vaccinated with Pfizer/BioNTech(2-dose), Moderna(2-dose), Johnson & Johnson/Janssen(1 dose): Updated by CDC</h2>
+   <h3><strong><span style="color:green" class="vac-num">Loading...</strong></span></h3>
+   <a class="news-btn" href="https://covid.cdc.gov/covid-data-tracker/#vaccinations">See More about COVID-19 Vaccination</a> 
+</div>
  <section class="boxes">
   <div class="box">
    <i class="fas fa-route fa-4x"></i>
