--- a/covidnews.html
+++ b/covidnews.html
@@ -154,7 +154,17 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>
-    <div class="article-container">
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Post-traumatic stress disorder: A differential diagnostic consideration for COVID-19 survivors</h3>
+     <p class="price">Source: Taylor Francis Online The Clinical NeuroPsychologist Published on August 26, 2020</p>
+     <a href="https://doi.org/10.1080/13854046.2020.1811894" class="btn">Link to Article</a>   
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
     <div class="news-box news-box-a">
      <h3>Jacobson v Massachusetts: It’s Not Your Great-Great-Grandfather’s Public Health Law</h3>
      <p class="price">Source: American Journal of Public Health on October 10, 2011 </p>
