--- a/index.html
+++ b/index.html
@@ -4191,6 +4191,16 @@
    </div>
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Native-like SARS-CoV-2 Spike Glycoprotein Expressed by ChAdOx1 nCoV-19/AZD1222 Vaccine</h3>
+     <p class="price">Source: American Chemical Society(ACS) Publications, Published on April 2, 2021</p>
+     <a href="https://doi.org/10.1021/acscentsci.1c00080" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Strain on NHS as tens of thousands of staff suffer long Covid</h3>
      <p class="price">Source: Guardian, Published on April 3, 2021</p>
      <a href="https://www.theguardian.com/society/2021/apr/03/nhs-feels-strain-tens-thousands-staff-long-covid" class="btn">Link to Article</a>
@@ -5087,6 +5097,26 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Changes in symptomatology, reinfection, and transmissibility associated with the SARS-CoV-2 variant B.1.1.7: an ecological study</h3>
+     <p class="price">Source: Lancet, Published on April 12, 2021</p>
+     <a href="https://doi.org/10.1016/S2468-2667(21)00055-4" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Joint CDC and FDA Statement on Johnson & Johnson COVID-19 Vaccine</h3>
+     <p class="price">Source: US Food and Drug Administration (FDA), Published on April 13, 2021</p>
+     <a href="https://www.reuters.com/article/us-health-coronavirus-novavax-idUSKBN2C013Z" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Novavax says supply shortages delaying full-speed production of its COVID-19 vaccine</h3>
