--- a/index.html
+++ b/index.html
@@ -2142,11 +2142,12 @@
   <div class="info-title">
     <p>COVID-19 Vaccine Progress</p>
   </div> 
+  <div class="vac-boxes">
+        <div class="vacbox"><p>Pfizer and BioNTech</p></div>
+        <div class="vacbox"><p>Moderna</p></div>
+        <div class="vacbox"><p>Johnson & Johson/Jessen</p></div>
+    </div>
 </section> 
-
-<section>
-  <div></div>
-</section>  
     
 <section>
   <div class="info-title">
