--- a/index.html
+++ b/index.html
@@ -5228,7 +5228,27 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>       
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Moderna Provides Clinical and Supply Updates on COVID-19 Vaccine Program Ahead of 2nd Annual Vaccines Day</h3>
+     <p class="price">Source: Moderna, Published on April 13, 2021</p>
+     <a href="https://investors.modernatx.com/news-releases/news-release-details/moderna-provides-clinical-and-supply-updates-covid-19-vaccine" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Moderna Announces Clinical Progress from its Industry-Leading mRNA Vaccine Franchise and Continues Investments to Accelerate Pipeline Development</h3>
+     <p class="price">Source: Moderna, Published on April 14, 2021</p>
+     <a href="https://investors.modernatx.com/news-releases/news-release-details/moderna-announces-clinical-progress-its-industry-leading-mrna" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>        
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Researchers Use Genetics To Identify Potential Drugs for Early Treatment of COVID-19</h3>
