--- a/index.html
+++ b/index.html
@@ -2143,9 +2143,21 @@
     <p>COVID-19 Vaccine Progress</p>
   </div> 
   <div class="vac-boxes">
-        <div class="vacbox"><p>Pfizer and BioNTech</p></div>
-        <div class="vacbox"><p>Moderna</p></div>
-        <div class="vacbox"><p>Johnson & Johson/Jessen</p></div>
+    <div class="vacbox">
+      <p>Pfizer and BioNTech</p>
+      <div id="pfizer1"></div>
+      <div id="pfizer2"></div>
+    </div>
+    <div class="vacbox">
+      <p>Moderna</p>
+      <div id="moderna1"></div>
+      <div id="moderna2"></div>
+    </div>
+    <div class="vacbox">
+      <p>Johnson & Johson/Jessen</p>
+      <div id="jessen1"></div>
+      <div id="jessen2"></div>
+    </div>
     </div>
 </section> 
     
