--- a/index.html
+++ b/index.html
@@ -2139,27 +2139,46 @@
  </section>
 
 <section>
+  <div></div>
+</section>  
+
+<section class="tabs">
   <div class="info-title">
     <p>COVID-19 Vaccine Progress</p>
   </div> 
   <div class="vac-boxes">
-    <div class="vacbox">
+    <div id="tab-1" class="vacbox tab-item tab-border">
       <p>Pfizer and BioNTech</p>
-      <div id="pfizer1"></div>
-      <div id="pfizer2"></div>
     </div>
-    <div class="vacbox">
+    <div id="tab-2" class="vacbox tab-item">
       <p>Moderna</p>
-      <div id="moderna1"></div>
-      <div id="moderna2"></div>
     </div>
-    <div class="vacbox">
+    <div id="tab-3" class="vacbox tab-item">
       <p>Johnson & Johson/Jessen</p>
-      <div id="jessen1"></div>
-      <div id="jessen2"></div>
     </div>
     </div>
 </section> 
+
+<section class="tab-content">
+  <div id="tab-1-content" class="tab-content-item show">
+      <div id="pfizer1"></div>
+      <div id="pfizer2"></div>
+  </div> 
+</section>
+
+<section class="tab-content">
+  <div id="tab-2-content" class="tab-content-item">
+      <div id="moderna1"></div>
+      <div id="moderna2"></div>
+  </div> 
+</section>
+
+<section class="tab-content">
+  <div id="tab-3-content" class="tab-content-item">
+      <div id="jessen1"></div>
+      <div id="jessen2"></div>  
+  </div>
+</section>
     
 <section>
   <div class="info-title">
