--- a/covidnews.html
+++ b/covidnews.html
@@ -7875,7 +7875,7 @@
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Efficacy of the ChAdOx1 nCoV-19 Covid-19 Vaccine against the B.1.351 Variant</h3>
-     <p class="price">Source: New Engaldn Journal of Medicine (NEJM), Published on March 16, 2021</p>
+     <p class="price">Source: New England Journal of Medicine (NEJM), Published on March 16, 2021</p>
      <a href="https://www.nejm.org/doi/full/10.1056/NEJMoa2102214" class="btn">Link to Study Article</a> 
     </div>
     <div class="news-box news-box-b">
@@ -8044,7 +8044,7 @@
    </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
-     <h3>Covid vaccine side-effects: what to know and why you shouldn't worry </h3>
+     <h3>Covid vaccine side-effects: what to know and why you shouldn't worry</h3>
      <p class="price">Source: Guardian, Published on March 18, 2021</p>
      <a href="https://www.theguardian.com/world/2021/mar/18/covid-vaccine-side-effects-pfizer-moderna-johnson-is-it-safe" class="btn">Link to Study Article</a> 
     </div>
