--- a/index.html
+++ b/index.html
@@ -4940,6 +4940,16 @@
    </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Distinct antibody and memory B cell responses in SARS-CoV-2 naïve and recovered individuals following mRNA vaccination</h3>
+     <p class="price">Source: Nature, Published on April 15, 2021</p>
+     <a href="https://doi.org/10.1126/sciimmunol.abi6950" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>         
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Biden administration working to ensure U.S. will have booster COVID-19 shots if they become necessary</h3>
      <p class="price">Source: CBS News, Published on April 16, 2021</p>
      <a href="https://www.cbsnews.com/news/covid-vaccine-booster-supply-biden-administration/" class="btn">Link to Article</a>
