--- a/covidnews.html
+++ b/covidnews.html
@@ -132,6 +132,16 @@
    </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Comparative tropism, replication kinetics, and cell damage profiling of SARS-CoV-2 and SARS-CoV with implications for clinical manifestations, transmissibility, and laboratory studies of COVID-19: an observational study</h3>
+     <p class="price">Source: Lancet, Published on April 21, 2020</p>
+     <a href="https://doi.org/10.1016/S2666-5247(20)30004-5" class="btn">Link to Study Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>        
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>An analysis of SARS-CoV-2 viral load by patient age </h3>
      <p class="price">Source: John Hopkins, Published on April 30, 2020</p>
      <a href="https://ncrc.jhsph.edu/research/an-analysis-of-sars-cov-2-viral-load-by-patient-age/" class="btn">Link to Article</a>
