--- a/covidnews.html
+++ b/covidnews.html
@@ -1210,6 +1210,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Olfactory transmucosal SARS-CoV-2 invasion as a port of central nervous system entry in individuals with COVID-19</h3>
+     <p class="price">Source: Nature, Published on November 30, 2020</p>
+     <a href="https://doi.org/10.1038/s41593-020-00758-5" class="btn">Link to Study</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
    <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Q&A: Cold chains, COVID-19 vaccines and reaching low-income countries</h3>
