--- a/covidnews.html
+++ b/covidnews.html
@@ -8449,13 +8449,23 @@
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Carcinogen Found in Hand Sanitizers That Plugged Covid Gap</h3>
-     <p class="price">Source: Bloomberg, Published on March 24, 2020</p>
+     <p class="price">Source: Bloomberg, Published on March 24, 2021</p>
      <a href="https://www.bloomberg.com/news/articles/2021-03-24/carcinogen-found-in-hand-sanitizers-that-plugged-pandemic-gap" class="btn">Link to Article</a>
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>The effect of omega-3 fatty acid supplementation on clinical and biochemical parameters of critically ill patients with COVID-19: a randomized clinical trial</h3>
+     <p class="price">Source: BioMedCenteral, Published on March 29, 2021</p>
+     <a href="https://doi.org/10.1186/s12967-021-02795-5" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
     
     
 
