--- a/index.html
+++ b/index.html
@@ -4425,7 +4425,7 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>      
+   </div>         
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Pfizer and BioNTech Request Regulatory Agencies Expand Emergency Use of Their COVID-19 Vaccine to Adolescents</h3>
@@ -5062,6 +5062,26 @@
    </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>SARS-CoV-2 seropositivity and subsequent infection risk in healthy young adults: a prospective cohort study</h3>
+     <p class="price">Source: Lancet, Published on April 15, 2021</p>
+     <a href="https://doi.org/10.1016/S2213-2600(21)00158-2" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Impact of January 2021 curfew measures on SARS-CoV-2 B.1.1.7 circulation in France</h3>
+     <p class="price">Source: Eurosurveillance, Published on April 15, 2021</p>
+     <a href="https://www.eurosurveillance.org/content/10.2807/1560-7917.ES.2021.26.15.2100272#metrics_content" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Functional autoantibodies against G-protein coupled receptors in patients with persistent post-COVID-19 symptoms</h3>
      <p class="price">Source: Science Direct, Published on April 16, 2021</p>
      <a href="https://www.sciencedirect.com/science/article/pii/S2589909021000204" class="btn">Link to Study Article</a>
@@ -5435,6 +5455,36 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>    
    </div>        
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Respiratory viral shedding in healthcare workers reinfected with SARS-CoV-2, Brazil, 2020</h3>
+     <p class="price">Source: CDC Emerging Infectious Disease, Published on April 19, 2021</p>
+     <a href="https://doi.org/10.3201/eid2706.210558" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>COVID-19 Vaccine Janssen: EMA finds possible link to very rare cases of unusual blood clots with low blood platelets</h3>
+     <p class="price">Source: European Medicines Agency (EMA), Published on April 20, 2021</p>
+     <a href="https://www.ema.europa.eu/en/news/covid-19-vaccine-janssen-ema-finds-possible-link-very-rare-cases-unusual-blood-clots-low-blood" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Single-cell multi-omics analysis of the immune response in COVID-19</h3>
+     <p class="price">Source: Nature, Published on April 20, 2021</p>
+     <a href="https://doi.org/10.1038/s41591-021-01329-2" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>SARS-CoV-2 induces double-stranded RNA-mediated innate immune responses in respiratory epithelial-derived cells and cardiomyocytes</h3>
