--- a/index.html
+++ b/index.html
@@ -5477,6 +5477,26 @@
    </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Safety and immunogenicity of SARS-CoV-2 recombinant protein vaccine formulations in healthy adults: interim results of a randomised, placebo-controlled, phase 1–2, dose-ranging study</h3>
+     <p class="price">Source: Lancet, Published on April 19, 2021</p>
+     <a href="https://doi.org/10.1016/S1473-3099(21)00147-X" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Asymptomatic and symptomatic SARS-CoV-2 infections elicit polyfunctional antibodies</h3>
+     <p class="price">Source: Cell, Published on April 20, 2021</p>
+     <a href="https://doi.org/10.1016/j.xcrm.2021.100275" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>COVID-19 Vaccine Janssen: EMA finds possible link to very rare cases of unusual blood clots with low blood platelets</h3>
      <p class="price">Source: European Medicines Agency (EMA), Published on April 20, 2021</p>
      <a href="https://www.ema.europa.eu/en/news/covid-19-vaccine-janssen-ema-finds-possible-link-very-rare-cases-unusual-blood-clots-low-blood" class="btn">Link to Article</a>
@@ -5646,6 +5666,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>    
    </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Interim guidance on the benefits of full vaccination against COVID-19 for transmission and implications for non-pharmaceutical interventions</h3>
+     <p class="price">Source: European Centre for Disease Prevention and Control, Published on April 21, 2021</p>
+     <a href="https://www.ecdc.europa.eu/en/publications-data/interim-guidance-benefits-full-vaccination-against-covid-19-transmission" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>    
+   </div>      
 <div>
   <a href="javascript:void(0)" class="news-btn covidnews"><i class="fas fa-plus fa-fw" aria-hidden="true"></i>Past Coronavirus News</a>  
 </div>
