--- a/covidnews.html
+++ b/covidnews.html
@@ -1200,6 +1200,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Outdoor Transmission of SARS-CoV-2 and Other Respiratory Viruses: A Systematic Review</h3>
+     <p class="price">Source: Oxford Academics on November 29, 2020</p>
+     <a href="https://doi.org/10.1093/infdis/jiaa742" class="btn">Link to Study</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
    <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Serologic testing of U.S. blood donations to identify SARS-CoV-2-reactive antibodies: December 2019-January 2020</h3>
