--- a/index.html
+++ b/index.html
@@ -5838,7 +5838,27 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>    
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Safety and Efficacy of Single-Dose Ad26.COV2.S Vaccine against Covid-19</h3>
+     <p class="price">Source: New England Journal of Medicine (NEJM), Published on April 21, 2021</p>
+     <a href="https://www.nejm.org/doi/full/10.1056/NEJMoa2101544" class="btn">Link to Study Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>    
    </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Valneva Initiates Phase 3 Clinical Trial for its Inactivated, Adjuvanted COVID-19 Vaccine Candidate, VLA2001</h3>
+     <p class="price">Source: Valneva, Published on April 21, 2021</p>
+     <a href="https://valneva.com/press-release/valneva-initiates-phase-3-clinical-trial-for-its-inactivated-adjuvanted-covid-19-vaccine-candidate-vla2001/" class="btn">Link to Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>    
+   </div>        
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Burning Man mulling mandatory COVID-19 vaccines for August</h3>
