--- a/index.html
+++ b/index.html
@@ -2162,7 +2162,20 @@
 <section class="tab-content">
   <div id="tab-1-content" class="tab-content-item show">
       <div id="pfizer1"></div>
-      <div id="pfizer2"></div>
+      <div id="pfizer2">
+        <form>
+        <fieldset>
+        <legend>US States</legend>
+        <!-- <button id="button" class="autocompare">Reset</button> -->
+        <select id="selectButton">
+          <option id="button4">United States</option>
+          <option id="button3">India</option>
+          <option id="button2">Russia</option>
+          <option id="button1">Canada</option>
+        </select>  
+        </fieldset>
+        </form>
+      </div>
   </div> 
 </section>
 
