--- a/covidnews.html
+++ b/covidnews.html
@@ -5449,6 +5449,16 @@
    </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Effectiveness of Adding a Mask Recommendation to Other Public Health Measures to Prevent SARS-CoV-2 Infection in Danish Mask Wearers</h3>
+     <p class="price">Source: ACP Journal, Published on March 2021</p>
+     <a href="https://doi.org/10.7326/M20-6817" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>New data show vaccines reduce severe COVID-19 in older adults</h3>
      <p class="price">Source: Gov Uk, Published on March 1, 2021</p>
      <a href="https://www.gov.uk/government/news/new-data-show-vaccines-reduce-severe-covid-19-in-older-adults" class="btn">Link to Article</a>
@@ -5476,7 +5486,7 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>  
+   </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Sharp Drop Seen in COVID Testing As New Cases Plateau</h3>
