--- a/index.html
+++ b/index.html
@@ -4914,6 +4914,26 @@
    </div>
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Antibody Responses in COVID-19: A Review</h3>
+     <p class="price">Source: Frontiers, Published on April 15, 2021</p>
+     <a href="https://doi.org/10.3389/fimmu.2021.633184" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Wealthy Latin Americans flock to US in search of vaccines</h3>
+     <p class="price">Source: AP News, Published on April 15, 2021</p>
+     <a href="https://apnews.com/article/business-travel-monterrey-mexico-coronavirus-pandemic-96f18e680da3c21f2ec57e0010b5254d" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Mortality outcomes with hydroxychloroquine and chloroquine in COVID-19 from an international collaborative meta-analysis of randomized trials</h3>
      <p class="price">Source: Nature, Accessed on April 15, 2021</p>
      <a href="https://doi.org/10.1038/s41467-021-22446-z" class="btn">Link to Article</a>
@@ -6024,6 +6044,86 @@
    </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>The SARS-CoV-2 and other human coronavirus spike proteins are fine-tuned towards temperature and proteases of the human airways</h3>
+     <p class="price">Source: PLOS, Published on April 22, 2021</p>
+     <a href="https://doi.org/10.1371/journal.ppat.1009500" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Safety and Efficacy of the BNT162b2 mRNA Covid-19 Vaccine</h3>
+     <p class="price">Source: New England Journal of Medicine (NEJM), Published on April 22, 2021</p>
+     <a href="https://www.nejm.org/doi/full/10.1056/NEJMc2036242" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Interim findings from first-dose mass COVID-19 vaccination roll-out and COVID-19 hospital admissions in Scotland: a national prospective cohort study</h3>
+     <p class="price">Source: Lancet, Published on April 23, 2021</p>
+     <a href="https://doi.org/10.1016/S0140-6736(21)00677-2" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>FDA and CDC Lift Recommended Pause on Johnson & Johnson (Janssen) COVID-19 Vaccine Use Following Thorough Safety Review</h3>
+     <p class="price">Source: US Food and Drug Administration (FDA), Published on April 23, 2021</p>
+     <a href="https://www.fda.gov/news-events/press-announcements/fda-and-cdc-lift-recommended-pause-johnson-johnson-janssen-covid-19-vaccine-use-following-thorough" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>From scarcity to abundance: US faces calls to share vaccines</h3>
+     <p class="price">Source: AP News, Published on April 23, 2021</p>
+     <a href="https://apnews.com/article/health-business-government-and-politics-immigration-europe-f6875e3094b1a51e9e8fc8ee84529ef0" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>COVID-19 vaccine coverage in health-care workers in England and effectiveness of BNT162b2 mRNA vaccine against infection (SIREN): a prospective, multicentre, cohort study</h3>
+     <p class="price">Source: Lancet, Published on April 23, 2021</p>
+     <a href="https://doi.org/10.1016/S0140-6736(21)00790-X" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>‘No data’ linking Covid vaccines to menstrual changes, US experts say</h3>
+     <p class="price">Source: Guardian, Published on April 23, 2021</p>
+     <a href="https://www.theguardian.com/world/2021/apr/23/covid-vaccines-periods-menstruation-changes-data-experts" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>B cell genomics behind cross-neutralization of SARS-CoV-2 variants and SARS-CoV</h3>
+     <p class="price">Source: Cell, Published on April 23, 2021</p>
+     <a href="https://doi.org/10.1016/j.cell.2021.04.032" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>US drop in vaccine demand has some places turning down doses</h3>
      <p class="price">Source: AP News, Published on April 23, 2021</p>
      <a href="https://apnews.com/article/nm-state-wire-health-coronavirus-government-and-politics-108f1fd0813f0d2ecec1589fd137625d" class="btn">Link to Article</a>
@@ -6103,6 +6203,66 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>    
    </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>The impact of the COVID-19 pandemic on mental health in the general population: a comparison between Germany and the UK</h3>
+     <p class="price">Source: BMC Psychology, Published on April 24, 2021</p>
+     <a href="https://doi.org/10.1186/s40359-021-00565-y" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>U.S. racing to send aid to India as COVID-19 cases soar</h3>
+     <p class="price">Source: Reuters, Published on April 24, 2021</p>
+     <a href="https://www.reuters.com/world/india/us-deploy-support-india-govt-healthcare-workers-2021-04-25/" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Virus ‘swallowing’ people in India; crematoriums overwhelmed</h3>
+     <p class="price">Source: AP News, Published on April 25, 2021</p>
+     <a href="https://apnews.com/article/health-india-religion-coronavirus-c644fc9eb09beb04e16d0215a6693886" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>The Impact of COVID-19 Disease on Platelets and Coagulation</h3>
+     <p class="price">Source: US National Library of Medicine, Accessed on April 25, 2021</p>
+     <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7649697/" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Time-dependent heterogeneity leads to transient suppression of the COVID-19 epidemic, not herd immunity</h3>
+     <p class="price">Source: PNAS, Published on April 27, 2021</p>
+     <a href="https://doi.org/10.1073/pnas.2015972118" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>A guideline to limit indoor airborne transmission of COVID-19</h3>
+     <p class="price">Source: PNAS, Published on April 27, 2021</p>
+     <a href="https://doi.org/10.1073/pnas.2018995118" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div>
   <a href="javascript:void(0)" class="news-btn covidnews"><i class="fas fa-plus fa-fw" aria-hidden="true"></i>Past Coronavirus News</a>  
 </div>
